Removed unused pages

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="font-color-contrast manual & demo" />
-  <title>font-color-contrast manual & demo</title>
+  <meta name="description" content="SoFloC" />
+  <title>SoFloC</title>
 </head>
 
 <body>
